--- a/HTMLeCSS/Curso_HTML_e_CSS/exercicios/ex-023/tabela002.html
+++ b/HTMLeCSS/Curso_HTML_e_CSS/exercicios/ex-023/tabela002.html
@@ -7,6 +7,7 @@
     <style>
         body {
             font-family: Arial, Helvetica, sans-serif;
+            background: rgba(255, 0, 187, 0.114);
         }
 
         caption {
@@ -30,6 +31,14 @@
         thead, tfoot {
             background-color: gray;
             color: white;
+        }
+
+        tbody > tr:nth-child(even) {
+            background-color: white;
+        } /*Efeito zebrado.*/
+
+        tbody > tr:nth-child(odd) {
+            background-color: lightgray;
         }
 
         td.num {
