--- a/HTMLeCSS/Curso_HTML_e_CSS/exercicios/ex-023/tabela002.html
+++ b/HTMLeCSS/Curso_HTML_e_CSS/exercicios/ex-023/tabela002.html
@@ -20,11 +20,24 @@
         table {
             width: 300px;
             border-collapse: collapse;
+            position: relative;
         }
 
         td, th {
             border: 1px solid black;
             padding: 10px;
+
+        }
+
+        thead > tr > th {
+            position: sticky;
+            top: -1px;
+            background-color: gray;
+        }
+
+        tfoot {
+            position: sticky;
+            bottom: 0px;
 
         }
 
@@ -191,5 +204,6 @@
             </tr>
         </tfoot>
     </table>
+    
 </body>
 </html>
