--- a/HTMLeCSS/Curso_HTML_e_CSS/exercicios/ex-023/tabela006.html
+++ b/HTMLeCSS/Curso_HTML_e_CSS/exercicios/ex-023/tabela006.html
@@ -34,7 +34,7 @@
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Accusantium autem perferendis voluptates suscipit praesentium ipsam maxime quas deleniti optio earum consectetur, asperiores ut cupiditate aspernatur animi nisi, consequatur assumenda sint labore vel? Corrupti dolorem enim velit sapiente dignissimos libero, voluptatibus voluptatum ducimus. Ipsa, earum culpa ratione illo voluptatibus quibusdam? Aliquid officiis ab quibusdam atque eum excepturi repellat possimus voluptatem impedit, nam ex! Accusamus corrupti in laudantium dicta molestiae et, cupiditate modi, nulla dolorem perspiciatis, minima ullam obcaecati asperiores nesciunt vel voluptatem? Quasi est eaque doloremque architecto repellendus commodi eius recusandae animi veniam odio, perferendis iusto quam aspernatur aut facere vel, hic dolor dolore magni error explicabo! Ullam eius molestias amet ea iusto minima, quis suscipit accusamus. Voluptatibus et cupiditate aut porro, ad beatae laboriosam hic reiciendis ipsum commodi eius, quisquam nulla numquam assumenda temporibus aperiam. Nobis consequuntur repellendus, harum voluptatibus repudiandae, aperiam pariatur, minus cupiditate doloremque in et recusandae laboriosam.</p>
     <div id="container">
         <table>
-            <caption></caption>
+            <caption>Venda de produtos por mês</caption>
             <thead>
                 <tr>
                     <th>Produto</th>
