--- a/HTMLeCSS/Curso_HTML_e_CSS/exercicios/ex-024/iframe002.html
+++ b/HTMLeCSS/Curso_HTML_e_CSS/exercicios/ex-024/iframe002.html
@@ -17,7 +17,9 @@
 <body>
     <h1>Teste com iframe</h1>
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nobis dolore a harum quaerat corrupti, distinctio nulla odit doloremque itaque modi? Possimus esse repellat in minima sunt. Aliquam ut facilis maxime.</p>
-    <iframe src="pag001.html" frameborder="0" height="500" width="500"></iframe>
+    <iframe src="paginas-extras/pag001.html" frameborder="0" height="500" width="500">
+        <p>Infelizmente seu navegador não é compatível com esse recurso!</p>
+    </iframe>
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Impedit explicabo, quas eum consequuntur labore accusantium, maxime doloribus aliquid sit eligendi, consequatur hic? Atque cum odio esse commodi quasi facilis adipisci.</p>
 </body>
 </html>
