--- a/HTMLeCSS/Curso_HTML_e_CSS/exercicios/ex-024/iframe003.html
+++ b/HTMLeCSS/Curso_HTML_e_CSS/exercicios/ex-024/iframe003.html
@@ -28,7 +28,7 @@
 
     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aut vel quaerat quibusdam. Iusto, rerum tempore dolorum quam doloremque architecto nam neque eveniet dignissimos dolores saepe? Esse consequatur voluptatum at cupiditate. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatibus illo possimus architecto obcaecati! Magni, inventore impedit quos rerum aliquam explicabo nam nostrum vel animi blanditiis voluptate, quas ipsa quia corrupti!</p>
 
-    <iframe id="tela" name="frame" src="iframe001.html">
+    <iframe id="tela" name="frame" srcdoc="<h1>Um HTML dentro de um HTML</h1><p>E aqui um parágrafo. Bem interessante, mas não é a melhor escolha. </p><ul><li>É melhor usar src para um documento</li><li>Muito trabalho fazer dessa maneira</li></ul><a href='https://www.cursoemvideo.com' target='_blank'>cursoemvideo.com</a>">
         <p>Infelizmente seu navegador não é compatível com isso!</p>
     </iframe>
 
